--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 /* ---------- root variables ---------- */
 :root {
-  --green: rgb(38, 76, 89);
-  --light-green: rgb(172, 198, 201);
-  --light-grey: #f1f1f4;
+  --dark-green: #006C3A;
+  --light-green: #4BB131;
+  --light-grey: #e8e8e8;
   --text-color-light: #f1f1f1;
   --text-color-dark: #333;
 }
@@ -29,45 +29,116 @@ h1 {
   letter-spacing: 3px;
   font-family: ArlaInterFaceRG;
 }
+
 /* ---------- side navigation ---------- */
-
-.sideNav{
+nav {
   position: fixed;
-	background: #fff;
-	top: 0px;
-	left: 0px;
-	width: 120px;
-	height: 100%;
-	overflow: none;
-	z-index: 1;
-	text-align: center;
-	padding: 0;
+  z-index: 9999;
+  background: #fff;
+  top: 0;
+  width: 100%;
+  height: 60px;
+  color: var(--dark-green);
 }
-.sideNav a{
-  color: #000;
-  height: auto;
 
+nav .holder-holder {
+  display: flex;
+  height: 60px;
 }
-.sideNav li{
-  width: 120px;
-  height: auto;
 
+nav .left-holder, nav .right-holder {
+  width: 40%;
 }
-.sideNav a:hover{
-background: #e8e8e8;
+
+nav .center-holder {
+  width: 20%;
 }
-.sideNav img{
-  padding-top: 23px;
+
+nav .logo {
+  height: 35px;
+  margin: 12px 0;
 }
-.sideNav p{
+
+nav .menuToggle {
+  display: none;
+}
+
+nav .menuIconContainer {
+  display: block;
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  padding: 19px;
+}
+
+nav .menuIconContainer .menuIcon {
+  display: block;
+  background-color: var(--dark-green);
+  width: 16px;
+  height: 2px;
+  margin: 8px auto 0 auto;
+}
+
+nav .menuIconContainer .menuIcon:first-child {
   margin-top: 0;
-  padding-top: 0;
 }
+
+nav ul {
+  display: none;
+  background-color: #fff;
+  width: 70px;
+  height: calc(100vh - 60px);
+}
+
+nav ul a {
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80px
+}
+
+nav ul li {
+  float: none;
+}
+
+nav ul a:hover{
+  background-color: var(--light-grey);
+}
+
 .active{
-  background: #e8e8e8;
-  border-right: solid 5px #19A413;
-  width: 125px;
+  background-color: var(--light-grey);
+  border-right: solid 5px var(--light-green);
+  width: 75px
 }
+
+/* nav .menuToggle:checked ~ ul {
+  display: block;
+} They are not siblings, so we use JS instead */
+.displayBlock {
+  display: block;
+}
+
+nav .menuToggle:checked ~ .menuIconContainer .menuIcon {
+  display: none;
+  background-color: var(--light-green);
+  width: 22px;
+}
+
+nav .menuToggle:checked ~ .menuIconContainer .menuIcon:first-child {
+  display: block;
+  transform: rotate(-45deg);
+  margin-top: 10px;
+  /* move it down to center */
+}
+
+nav .menuToggle:checked ~ .menuIconContainer .menuIcon:last-child {
+  display: block;
+  transform: rotate(45deg);
+  margin-top: -2px; /* minus height of span */
+}
+
+
 
 /* ---------- page styling ---------- */
 .page {
@@ -76,11 +147,11 @@ background: #e8e8e8;
   min-height: calc(100vh - 110px);
   background: var(--light-grey);
   animation: fadeIn 0.4s;
-  /* padding equals height of tabbar and topbar */
-  padding-left: 120px;
+  /* padding equals height of nav */
+  padding-top: 60px;
 }
 
-/* ---------- logo styling ---------- */
+/* ---------- logo styling ----------
 .logo {
   width: 100%;
   padding: 0.5em;
@@ -104,3 +175,83 @@ background: #e8e8e8;
     opacity: 1
   }
 }
+
+/* On screens that are 601px or more (Tablet Portrait through landscape) */
+@media screen and (min-width: 601px) {
+
+}
+
+/* On screens that are 1025px or more (Laptop through desktop) */
+@media screen and (min-width: 1025px) {
+
+  nav {
+    width: 90px;
+    height: 100%;
+  }
+
+  nav .holder-holder {
+    height: 100px;
+  }
+
+  nav .left-holder {
+    display: none;
+  }
+
+  nav .center-holder {
+    width: 100%;
+  }
+
+  nav .logo {
+    height: 100px;
+    margin: 0;
+    padding: 30px 16px;
+  }
+
+  nav .right-holder {
+    display: none; /* Only temporary */
+  }
+
+  nav ul {
+    display: block;
+    height: auto;
+  }
+
+  nav ul a {
+    width: 90px;
+  }
+
+  .active {
+    width: 95px;
+  }
+
+}
+
+/*
+.sideNav{
+  position: fixed;
+	background: #fff;
+	top: 0px;
+	left: 0px;
+	width: 120px;
+	height: 100%;
+	overflow: none;
+	z-index: 1;
+	text-align: center;
+	padding: 0;
+}
+
+.sideNav li{
+  width: 120px;
+  height: auto;
+
+}
+
+.sideNav img{
+  padding-top: 23px;
+}
+.sideNav p{
+  margin-top: 0;
+  padding-top: 0;
+}
+
+*/
