--- a/css/main.css
+++ b/css/main.css
@@ -2,35 +2,108 @@
 :root {
   --dark-green: #006C3A;
   --light-green: #4BB131;
-  --light-grey: #e8e8e8;
+  --light-grey: #E8E8E8;
+  --bg-grey: #F0F0F0;
   --text-color-light: #f1f1f1;
   --text-color-dark: #333;
 }
+
+/* Fonts */
+/* Arla Regular */
 @font-face {
-    font-family: "ArlaInterFaceRG";
-    src: url("../font/ArlaIF_Rg.ttf");
+    font-family: "Arla";
+    src: url("../fonts/ArlaIF_Rg.ttf");
+    font-weight: 400;
+    font-style: normal;
 }
+
+/* Arla Italic */
+@font-face {
+    font-family: "Arla";
+    src: url("../fonts/ArlaIF_It.ttf");
+    font-weight: 400;
+    font-style: italic;
+}
+
+/* Arla Bold */
+@font-face {
+    font-family: "Arla";
+    src: url("../fonts/ArlaIF_Bd.ttf");
+    font-weight: 700;
+    font-style: normal;
+}
+
+/* Arla Black */
+@font-face {
+    font-family: "Arla";
+    src: url("../fonts/ArlaIF_Blk.ttf");
+    font-weight: 900;
+    font-style: normal;
+}
+
+/* Arla Light */
+@font-face {
+    font-family: "Arla";
+    src: url("../fonts/ArlaIF_Lt.ttf");
+    font-weight: 300;
+    font-style: normal;
+}
+
+/* Emmascript */
+@font-face {
+    font-family: "Emmascript";
+    src: url("../fonts/Emmascript_MVB_Std_Regular.otf");
+    font-weight: 400;
+    font-style: normal;
+}
+
 /* ---------- general styling ---------- */
 html {
   color: #000;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Arla", Helvetica, Arial, sans-serif;
+  font-size: 20px;
   height: 100%;
   text-align: center;
-  width: 100%;
+  width: 100vw;
 }
 
 body {
   margin: 0;
 }
 
-h1 {
-  font-size: 2em;
-  font-weight: 300;
-  letter-spacing: 3px;
-  font-family: ArlaInterFaceRG;
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
 }
 
-/* ---------- side navigation ---------- */
+h1, h2, h3 {
+  font-weight: 700;
+  margin-top: 0;
+  margin-bottom: 0.75em;
+  text-transform: uppercase;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+h2 {
+  font-size: 1.5em;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 0.5em;
+}
+
+.emmascript {
+  font-family: "Emmascript", Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  text-transform: lowercase;
+  margin-bottom: 0;
+}
+
+/* ---------- responsive side navigation ---------- */
 nav {
   position: fixed;
   z-index: 9999;
@@ -143,13 +216,75 @@ nav .menuToggle:checked ~ .menuIconContainer .menuIcon:last-child {
 /* ---------- page styling ---------- */
 .page {
   display: none;
-  /*min heigh is screen heigh minus height of tab and top bar */
-  min-height: calc(100vh - 110px);
+  min-height: 100vh;
   background: var(--light-grey);
   animation: fadeIn 0.4s;
   /* padding equals height of nav */
   padding-top: 60px;
 }
+
+.page header {
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: #fff;
+  min-height: 300px !important; /* Override materialize */
+  height: auto;
+}
+
+.row .col {
+  background-color: #fff;
+  min-height: 300px;
+  margin-bottom: 5px;
+  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
+.row:after {
+  display: none;
+}
+
+/* Dashboard */
+#dashboard header {
+  background-image: url(../img/dashboard-cow.jpg);
+}
+
+/* Survey */
+#survey header {
+  background-image: url(../img/survey-landscape.jpg);
+}
+
+/* Statistics */
+#statistics header {
+  background-image: url(../img/statistics-cows.jpg);
+}
+
+#statistics .row .col {
+  color: #fff;
+  background-color: #fff;
+}
+
+#statistics .row #totalFootprint {
+  background-color: #3F7D8C;
+}
+
+#statistics .row #totalChart {
+
+}
+
+/* Leaderboard */
+#leaderboard header {
+  background-image: url(../img/leaderboard-farmers.jpg);
+  background-position: 60%;
+}
+
+/* Profile */
+#profile header {
+  background-image: url(../img/profile-landscape.jpg);
+}
+
 
 /* ---------- animations ---------- */
 /* fade in */
@@ -213,6 +348,7 @@ nav .menuToggle:checked ~ .menuIconContainer .menuIcon:last-child {
 
   .page {
     padding-top: 0;
+    margin-top: -20px;
     padding-left: 90px;
   }
 
